--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -4,6 +4,6 @@ language:
     fig: 'Figura '
     tab: 'Tabla '
   ui:
-    chapter_name: "Módulo "
+    chapter_name: "Sección "
 delete_merged_file: true
 output_dir: "docs"
