Centrado en CADIS
Se cambia el orden de las secciónes para dar más relevancia a los consejos para subir los datos.

Se incorporan comentarios sobre como los consejos se relacionan con los estandares.

se incorpora un modo en el cual investigadores cualitativos y cuantitativos pueden generar de modo relativamente sencillo los metadatos en formato Json.

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -4,6 +4,6 @@ language:
     fig: 'Figura '
     tab: 'Tabla '
   ui:
-    chapter_name: "Sección "
+    chapter_name: ""
 delete_merged_file: true
 output_dir: "docs"
